# cirrus

./: Cargo.toml  README.md  provider.json
src/: creator.rs  dynamic.rs  lib.rs  traits.rs
src/providers/: mod.rs
src/providers/boilerplate/: boilerplate.rs  boilerplate_response.rs  mod.rs
src/providers/digital_ocean/: creator.rs  digital_ocean.rs  digital_ocean_request.rs  digital_ocean_response.rs  mod.rs  request.rs  response.rs
src/providers/fake/: fake.rs  fakes.rs  mod.rs
src/providers/hetzner/: hetzner.rs  hetzner_response.rs
src/providers/scaleway/: mod.rs  scaleway.rs  scaleway_request.rs  scaleway_response.rs
tests/: test.rs
