[package]
name = "cirrus"
authors = ["Jose Salazar <znx3p0@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/btl/"
repository = "https://github.com/znx3p0/cirrus"

[dependencies]
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"